--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                 <!-- Добавление хэш-тегов и комментария к изображению -->
                 <fieldset class="img-upload__text text">
-                  <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег" min="2" max="104">
+                  <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег" minLength="2" maxLength="100">
                   <textarea class="text__description" name="description" placeholder="Ваш комментарий..." max="140"></textarea>
                 </fieldset>
 
