--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <!-- Добавление хэш-тегов и комментария к изображению -->
                 <fieldset class="img-upload__text text">
                   <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег" minLength="2" maxLength="100">
-                  <textarea class="text__description" name="description" placeholder="Ваш комментарий..." max="140"></textarea>
+                  <textarea class="text__description" name="description" placeholder="Ваш комментарий..." maxLength="140"></textarea>
                 </fieldset>
 
                 <!-- Кнопка для отправки данных на сервер -->
